--- a/Base/app/src/main/res/layout/activity_main.xml
+++ b/Base/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,17 @@
     <TextView
         android:text="@string/hello_world"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/textView" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Send help"
+        android:id="@+id/buttonSend"
+        android:layout_below="@+id/textView"
+        android:layout_toRightOf="@+id/textView"
+        android:layout_toEndOf="@+id/textView"
+        android:layout_marginTop="37dp" />
 
 </RelativeLayout>
