--- a/Base/app/src/main/res/layout/activity_main.xml
+++ b/Base/app/src/main/res/layout/activity_main.xml
@@ -8,20 +8,38 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
-    <TextView
-        android:text="@string/hello_world"
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView" />
+        android:inputType="phone"
+        android:ems="10"
+        android:id="@+id/phoneNumber"
+        android:layout_alignParentTop="true"
+        android:text="Enter Friend's Phone Number"
+        android:layout_alignRight="@+id/user_Notification_Interval"
+        android:layout_alignEnd="@+id/user_Notification_Interval"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/user_Notification_Interval"
+        android:layout_below="@+id/phoneNumber"
+        android:text="Enter Time Before Notification"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Send help"
-        android:id="@+id/buttonSend"
-        android:layout_below="@+id/textView"
-        android:layout_toRightOf="@+id/textView"
-        android:layout_toEndOf="@+id/textView"
-        android:layout_marginTop="37dp" />
+        android:text="Start/Stop"
+        android:id="@+id/start_button"
+        android:layout_below="@+id/user_Notification_Interval"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
